--- a/views/feedback.html
+++ b/views/feedback.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="/static/css/feedback.css">
 <div id="app">
     <app-header></app-header>
-  	<fform></fform>
+  	<fform :param="{{usersall}}"></fform>
   	<app-footer></app-footer>
 </div>
 <script src="/static/js/feedback.js"></script>
