index file python

--- a/views/python.html
+++ b/views/python.html
@@ -107,7 +107,7 @@
                 <span>Webpack</span>
             </div>
             <div class="links">
-                <a href="https://evgeniyvinokurov.pythonanywhere.com/catalog/" target="_blank">Демо</a>
+                <a href="/catalog/" target="_blank">Демо</a>
                 <a href="https://github.com/evgeniyvinokurov/xmla" target="_blank">Исходники</a>
             </div>
         </div>
@@ -122,7 +122,7 @@
                 <span>Webpack</span>
             </div>
             <div class="links">
-                <a href="https://evgeniyvinokurov.pythonanywhere.com/race/" target="_blank">Демо</a>
+                <a href="/race/" target="_blank">Демо</a>
                 <a href="https://gitflic.ru/project/evgeniyvinokurov/roach-race" target="_blank">Исходники</a>
             </div>
         </div>
@@ -137,7 +137,7 @@
                 <span>Webpack</span>
             </div>
             <div class="links">
-                <a href="http://evgeniyvinokurov.pythonanywhere.com/feedback/" target="_blank">Демо</a>
+                <a href="/feedback/" target="_blank">Демо</a>
                 <a href="https://github.com/evgeniyvinokurov/base-python-app-for-web" target="_blank">Исходники</a>
             </div>
         </div>
@@ -145,5 +145,5 @@
     </main>
     
     <footer>
-        <p>© 2025 Мои пет-проекты | Связь: evgeniy.vinokuroff@yandex.ru</p>
+        <p>© 2026 Мои питон пет-проекты | Связь: evgeniy.vinokuroff@yandex.ru</p>
     </footer>
