--- a/views/more.html
+++ b/views/more.html
@@ -57,21 +57,36 @@
 Случайный плейлист из 500 лучших песен</br>
 </br>
 Плейлист на базе случайного алгоритма</br> 
-</div><a href='/static//demo/get-your-song.jpg'><img width='300px' src='/static//demo/get-your-song.jpg'/></a><li><a class='link' href='https://gitflic.ru/project/evgeniyvinokurov/get-your-song/'>gitflic</a>&nbsp;&nbsp;<a class='link' href='http://www.evgeniyvinokurov.byethost9.com/get-your-song/'>demo</a></li></p></div><div class='project python ffmpeg'><p><div><h2># python-scripts  
-</h2></br>
-Скрипты на питоне (мой быстрый старт на питоне)</br>
-</br> 
-- mixer.py - класс работы с видео для генерации коллажей</br>
-- playmixer.py - генерация видео коллажей с музыкой, настройки в файле .config</br>
-- playautoletter.py - автописьмо</br>
-- eightball.py - класс - генерация псевдослучайных значений</br>
-- finder.py - поиск дубликатов файлов и полное удаление их (дублиткатов) из системы</br>
-- links.py - генерация файла sitemap.xml</br>
-- lottery.py - генерация чисел для лотереи</br>
-- playlistmaker.py - плейлист генератор</br>
-- randomMixerSalts.py - вариации выбора псевдослучайных значений</br>
-- musicLibrary.py - поиск неповрежденной музыки на компьютере</br>
-</div><video controls width='250'><source src='/static//demo/python-scripts.mp4' type='video/mp4' /></video><li><a class='link' href='https://github.com/evgeniyvinokurov/python-scripts'>github</a></li></p></div><div class='project python js'><p><div><h2># story-linker ver 0.0.1  
+</div><a href='/static//demo/get-your-song.jpg'><img width='300px' src='/static//demo/get-your-song.jpg'/></a><li><a class='link' href='https://gitflic.ru/project/evgeniyvinokurov/get-your-song/'>gitflic</a>&nbsp;&nbsp;<a class='link' href='http://www.evgeniyvinokurov.byethost9.com/get-your-song/'>demo</a></li></p></div><div class='project python ffmpeg'><p><div><h2># random-scripts-video-and-texts v0.8.6  
+</h2>Фабрика случайных скриптов на питоне</br>
+</br>
+- классы</br>
+remixer.py - новый класс работы с видео для генерации коллажей</br>
+usefull.py - класс полезных функций</br>
+eightball.py - класс для генерации псевдослучайных значений</br>
+randomio.py - класс работы с файловой системой для чтения байтов и текстов</br>
+magicklib.py - класс - магия</br>
+musicle.py - класс - музыкальные фунциии</br>
+</br>
+- примеры скриптов</br>
+autoletter.py - автописьмо</br>
+livedb.py - бредовый автомат повторного использования текста</br>
+lottery.py - генерация чисел для лотереи</br>
+make_playlist.py - плейлист генератор</br>
+music_library.py - поиск неповрежденной музыки на компьютере</br>
+play_salts_files.py - случайные файлы и картинки</br>
+play_salts_music.py - случайная песня по картинке</br>
+play_remixer.py - генерация случайных видео коллажей с музыкой, настройки в файле .config</br>
+make_clip_remixer.py - генерация клипов по полной песне</br>
+</br>
+- скрипты Usefull</br>
+append_audio.py - добавление музыки в видео по размеру видео</br>
+finder.py - поиск дубликатов файлов и полное перемещение их (дублиткатов) в отдельную папку</br>
+links.py - генерация файла sitemap.xml</br>
+</br>
+- js</br>
+eightball.js - скрипт для 8шара в браузере, можно добавлять в функцию соль и получать случайное значение из массива + скрипт для моей книжной полки (+ по соли)</br>
+</div><video controls width='250'><source src='/static//demo/random-scripts-video-and-texts.mp4' type='video/mp4' /></video><li><a class='link' href='https://github.com/evgeniyvinokurov/random-scripts-video-and-texts'>github</a></li></p></div><div class='project python js'><p><div><h2># story-linker ver 0.0.1  
 </h2></br>
 Хроники придуманных миров</br>
 </br>
@@ -273,7 +288,7 @@ xml-engine генератор сущностей на xml</br>
 		projectsDiv.innerHTML = projectsHtml;
     });
 </script>
-<div class="text__date"><p>Last updated: </p><div class="date">2026-01-14</div>
+<div class="text__date"><p>Last updated: </p><div class="date">2026-01-18</div>
 					</div>
 					
 					<!--<div>-->
