--- a/views/header.html
+++ b/views/header.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  	<title>Python samples</title>
+	  <title>Евгений Винокуров, программист</title>
+  	<meta name="Keywords" content="Евгений Винокуров, Evgenii Vinokurov, Evgeniy Vinokurov, Евгений Винокуров ВКонтакте, Евгений Винокуров Одноклассники, Бесплатные сайты, Резюме Евгений Винокуров, Евгений Винокуров программист">
+    <meta name="description" content="Сайт программиста Евгения Винокурова. Евгений Винокуров программист."> 
+	  <link rel="shortcut icon" type="image/png" href="/favicon.jpg"/>
   </head>
   <body>
