--- a/views/more.html
+++ b/views/more.html
@@ -178,18 +178,18 @@ xml-engine генератор сущностей на xml</br>
 Пользователь админ (поменять пароль при установке) - joe</br>
 Проект может работать с докер: `docker compose up` and visit http://127.0.0.1:8000/</br>
 
-</div><a href='/static//demo/veggy-farm.jpg'><img width='300px' src='/static//demo/veggy-farm.jpg'/></a><li><a class='link' href='https://github.com/evgeniyvinokurov/veggy-farm'>github</a></li></p></div><div class='project python bottle xml vuejs markup'><p><div><h2># base-python-app-for-web  
-</h2>## feedback form</br>
-Как часть приложения bottle загружает код из подпапки</br>
-файлы проекта feedback:</br>
- - feedback-src - фронтенд формы обратной на vue.js</br>
- - projects/feedback - python код формы обратной связи</br>
- - views/feedback.html - вью формы обратной связи для bottle.py</br>
- - static/js, static/css - фронтенд код и стили фомы обратной связи</br>
- - сборка фронтенда: node ./node_modules/webpack/bin/webpack.js</br>
+</div><a href='/static//demo/veggy-farm.jpg'><img width='300px' src='/static//demo/veggy-farm.jpg'/></a><li><a class='link' href='https://github.com/evgeniyvinokurov/veggy-farm'>github</a></li></p></div><div class='project python bottle xml vuejs markup'><p><div><h2># feedback form  1.0.1  
+</h2></br>
+Bottle feedback form for bottle xml app.</br>s 
+
+файлы:</br>
+ - codes/** - python код проектов</br>
+ - js-feedback-src/** - джаваскрипт исходники</br></br>
+ - views/** - вью формы</br>
+ - static/** - скомпилированный фронтенд код, стили</br>
 
  
-</div><a href='/static//demo/base-python-app-for-web.jpg'><img width='300px' src='/static//demo/base-python-app-for-web.jpg'/></a><li><a class='link' href='https://github.com/evgeniyvinokurov/base-python-app-for-web'>github</a>&nbsp;&nbsp;<a class='link' href='/feedback/'>demo</a></li></p></div></div>
+</div><a href='/static//demo/feedback-form-bottle.jpg'><img width='300px' src='/static//demo/feedback-form-bottle.jpg'/></a><li><a class='link' href='https://github.com/evgeniyvinokurov/feedback-form-bottle'>github</a>&nbsp;&nbsp;<a class='link' href='/feedback/'>demo</a></li></p></div></div>
 <script type="text/javascript">
     function shuffleArray(array) {
         for (let i = array.length - 1; i > 0; i--) {
